--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@fastify/jwt": "^6.3.1",
-    "@prisma/client": "^4.1.1",
+    "@prisma/client": "3",
     "argon2": "^0.28.7",
     "fastify": "^4.3.0",
     "joi": "^17.6.0",
