--- a/server/package.json
+++ b/server/package.json
@@ -26,13 +26,13 @@
     "reflect-metadata": "^0.1.13",
     "sanitize-html": "^2.7.1",
     "tweetnacl": "^1.0.3",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
     "@types/argon2": "^0.15.0",
     "@types/node": "^18.6.2",
     "@types/sanitize-html": "^2.6.2",
-    "dotenv": "^16.0.1",
     "nodemon": "^2.0.19",
     "prisma": "^3.15.2",
     "typescript": "^4.7.4"
